--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1,6 +1,14 @@
-@misc{dictionary_cambridge_envy,
+@misc{dictionary_cambridge:envy,
   title = {{Cambridge Dictionaries Online}},
   howpublished = "\url{https://dictionary.cambridge.org/dictionary/english/envy/}",
   year = {2023}, 
   note = "[Online; accessed 29-July-2023]"
 }
+
+  @misc{ enwiki:relative_income,
+    author = "{Wikipedia contributors}",
+    title = "Relative income hypothesis --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2023",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Relative_income_hypothesis&oldid=1161843979}",
+    note = "[Online; accessed 29-July-2023]"
+  }
