--- a/doc/sections/abstract.tex
+++ b/doc/sections/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-To \textit{envy} is to wish that you had something that another person has \cite{dictionary_cambridge_envy}.
+To \textit{envy} is to wish that you had something that another person has \cite{dictionary_cambridge:envy}.
 There are no measures for quantifying the collective extent of envy prevenlt in a group (like a country). 
 This paper attempts to define such a metric. 
 As is the case with such cases, there are many assumptions and simplifications.
