--- a/doc/sections/s1.tex
+++ b/doc/sections/s1.tex
@@ -10,7 +10,7 @@ In this paper, we will isolate our definition to one type of envy - say, envy fo
 
 We will denote Person $i$'s income as $I_i$ and Person $j$'s income as $I_j$. 
 
-We will denote Person $j$'s income relative to Person $i$ as $R_{i,j}$.
+We will denote Person $j$'s income relative to Person $i$ as $R_{i,j}$. See also \cite{enwiki:relative_income}.
 
 \begin{equation}
     R_{i,j} = \frac{I_j}{I_i}
@@ -49,7 +49,7 @@ There are many ways in which the increase and decline could happen, but we will 
         0, 
         \beta_{i,j} \ge 2
     \end{cases}
-\end{equation}
+\end{equation}\footnote{Add image version of this equation.}
 
 where 
 
