--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1,5 +1,6 @@
 @misc{dictionary_cambridge:envy,
-  title = {{Cambridge Dictionaries Online}},
+author = "{Cambridge Dictionaries Online}",
+  title = "Cambridge Dictionaries Online",
   howpublished = "\url{https://dictionary.cambridge.org/dictionary/english/envy/}",
   year = {2023}, 
   note = "[Online; accessed 29-July-2023]"
