--- a/doc/sections/s4.tex
+++ b/doc/sections/s4.tex
@@ -5,7 +5,7 @@
 Trivially, when the entire population has the same income, there is no Envy. 
 
 \begin{equation}
-    I_i = k \forall i \implies E = 0
+    \forall i,  I_i = k \implies E = 0
 \end{equation}
 
 
